edit response code, add swagger
